--- a/package.json
+++ b/package.json
@@ -46,24 +46,24 @@
     "jsonwebtoken": "^8.2.1",
     "mapbox-gl": "^0.53.1",
     "method-override": "^2.3.10",
-    "mongoose": "^5.1.0",
+    "mongoose": "^5.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
     "ng2-dragula": "^1.5.0",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "rxjs": "6.2.0",
     "rxjs-compat": "^6.0.0-rc.0",
-    "sequelize": "^5.2.8",
+    "sequelize": "^5.3.1",
     "swagger-ui-express": "^3.0.9",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "^3.3.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0-beta.1",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^6.1.9",
     "@angular/compiler-cli": "^6.1.9",
     "@angular/language-service": "^6.1.9",
